2013-02-19  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, server/meta.c, server/avahi.c, server/player.c,
	client/common/client.c, common/game.c, common/game.h: Moved the #define
	of PROTOCOL_VERSION to the enum ClientVersionType for a single location
	to keep the PROTOCOL_VERSION.

2013-02-17  Roland Clobus <rclobus@rclobus.nl>
	* admin-scripts/list.sh: Works for 5/6-player game too.

2013-02-15  Roland Clobus <rclobus@rclobus.nl>
	* server/admin.c, server/admin.h, server/meta.c, client/gtk/connect.c,
	common/state.c, common/network.c, common/network.h: Removed function
	casts for NetNotifyFunc.
	* server/admin.c, common/network.c, common/network.h: Revert of the
	change on 2012-04-03, now the admin interface works again.
	* server/turn.c, server/admin.c, server/admin.h, server/main.c: The
	admin interface uses the current game. Cleanup of private functions.

2013-02-12  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c: Better logic for the +/- buttons for columns
	when the limit is reached.
	* client/gtk/frontend.h, client/gtk/interface.c,
	client/gtk/callbacks.c: Close the game over dialog when a new game
	starts.

2013-02-10  Roland Clobus <rclobus@rclobus.nl>
	* server/buildutil.c: Fixed warning from --enable-warnings=full.

2013-02-09  Roland Clobus <rclobus@rclobus.nl>
	* Makefile.am: Distribute pioneers.pot in the tarball again.

2013-02-08  Roland Clobus <rclobus@rclobus.nl>
	* server/main.c, server/gtk/main.c, server/server.c: Moved avahi
	related code to central location.
	* server/gtk/main.c: Fixed crash after quit.

2013-01-27  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c, common/cards.c, common/map_query.c,
	common/gtk/player-icon.c, common/gtk/guimap.c, common/gtk/player-icon.h,
	common/gtk/colors.c, common/gtk/theme.c, common/gtk/config-gnome.c,
	common/game.c, common/state.c, common/network.c, common/buildrec.c,
	meta-server/main.c, configure.ac, server/admin.c, server/buildutil.c,